--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
 				<div class="col-lg-12">
 					<div class="hero-content">
 						
-						<h1 data-splitting>The Farm</h1>
-						<h1 data-splitting>Event Space</h1>
-						<p>The Farm event space offers a fairy tale garden wedding in a tropical greenhouse setting, perfect in any season. As night falls, twinkling lights create a starry ambiance amidst lush greenery, ensuring unforgettable memories for you and your guests.</p>
+						<h1 data-splitting style="color: #fff;">The Farm</h1>
+						<h1 data-splitting style="color: #fff;">Event Space</h1>
+						<p style="color: #fff;">The Farm event space offers a fairy tale garden wedding in a tropical greenhouse setting, perfect in any season. As night falls, twinkling lights create a starry ambiance amidst lush greenery, ensuring unforgettable memories for you and your guests.</p>
                         <!-- <div class="hero-img">
                          	<img src="assets/images/home7/hero-image-2.png" alt="">
                         </div> -->
