--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
 		<div class="row align-items-center">
 			<div class="col-lg-6 col-md-6">
 				<div class="footer-bottom-content">
-					<p>The Farm © 2024 All Right Reserved</p>
+					<p>THEFARMUIBRIDGE © 2024 All Right Reserved</p>
 				</div>
 			</div>
 			<div class="col-lg-6 col-md-6">
