--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 			<div class="col-lg-8 col-md-6">
 				<div class="top-header-info">
 					<ul>
-						<li><i class="bi bi-envelope-open"></i> example@gmail.com</li>
-						<li><i class="bi bi-geo-alt"></i> - Canada</li>
-						<li><i class="bi bi-telephone-inbound-fill"></i>+123 (4567) 890</li>
+						<li><i class="bi bi-envelope-open"></i> info@thefarm.com</li>
+						<li><i class="bi bi-geo-alt"></i> Scarborough - Ontario</li>
+						<li><i class="bi bi-telephone-inbound-fill"></i>+1 (437) 432 8900</li>
 					</ul>
 				</div>
 			</div>
@@ -103,8 +103,7 @@
 						<ul>
 							<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-							<li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+							<li><a href="#"><i class="fab fa-instagram"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -1057,8 +1056,7 @@
              	   <ul>
              	   	<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
              	   	<li><a href="#"><i class="fab fa-twitter"></i></a></li>
-             	   	<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-             	   	<li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+             	   	<li><a href="#"><i class="fab fa-instagram"></i></a></li>
              	   </ul>
                 </div>
 			</div>
@@ -1068,11 +1066,10 @@
 						<h4>Company</h4>
 					</div>
 					<div class="footer-widget-menu">
-						<p>4175 Anderson Road, Carlsbad Springs, Ontario</p>
+						<p>4175 Anderson Road, Scarborough, Ontario</p>
 						<ul>
-							<li>Phone : 613-822-9644</li>
-							<li>Gmail : info@example.com</li>
-							<li>Mon - Sat: 09.00 to 06.30</li>
+							<li>Phone : 437-822-9644</li>
+							<li>Gmail : info@thefarm.com</li>
 						</ul>
 					</div>
 				</div>
